# OrionEngine

./: .gitignore  CMakeLists.txt  README.md
docs/: ENGINE_STRUCTURE.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  imconfig.h
lib/stb/: CMakeLists.txt
src/: orion.cpp  orion.h  orion_config.h
src/core/: assert.h  builds.h  log.cpp  log.h
src/core/debug_ui/: gui.h
src/core/debug_ui/opengl/: opengl_gui.cpp
src/core/defines/: build_defines.h
src/core/math/: constants.h  limits.h  matrix4.h  omath.h  quaternion.h  vector2.h  vector3.h
src/core/math/types/: matrix4.h  quaternion.h  vector2.h  vector3.h
src/core/memory/allocators/: allocator.h  arena_allocator.cpp  arena_allocator.h  dummy_allocator.cpp  dummy_allocator.h  typed_allocator.h
src/core/memory/containers/: array.h  vector.h
src/core/stl/: move.h  type_traits.h
src/core/string/: ostring.cpp  ostring.h
src/platform/: compiler_macros.h  console.h  memory.h  othread.h  platform.h  timer.h  types.h
src/platform/graphics/: buffer.h  framebuffer.h  gpu_atomic_types.h  graphics_context.h  pipeline.h  shader.h  texture.h  texture_format.cpp  texture_format.h  window.h
src/platform/graphics/opengl/: opengl_buffer.cpp  opengl_framebuffer.cpp  opengl_graphics_context.cpp  opengl_native_types.cpp  opengl_native_types.h  opengl_pipeline.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_window.cpp
src/platform/linux/: console_linux.cpp  memory_linux.cpp  timer_linux.cpp
src/platform/win32/: console_win32.cpp  memory_win32.cpp  thread_win32.cpp  timer_win32.cpp
src/render/: frame_graph.h  frame_graph_builder.cpp  frame_graph_builder.h  render_graph.h  render_pass.h
src/render/pass/: gbuffer_pass.h
src/render/resource/: frame_graph_resource.h  frame_graph_texture.h
src/util/: forward.h  move.h  remove_reference.h  type_traits.h
